# networks-minimal

./: CMakeLists.txt  Readme.md  bert.cu  naive_lstm.cu  seq2seq.cu  wavefront_lstm.cu
bert/: CMakeLists.txt  base.cu  bert.cu
change/: BuiltinsNVPTX.def  barrier  mma.hpp
deepspeech2/: CMakeLists.txt  deepspeech.cu  deepspeech.h
deepspeech2/lstm/: CMakeLists.txt  base.cu  basefunction.cuh  lstm.cu  lstm.h  lstm_params.h  wavefunction.cuh
deepspeech2/op/: CMakeLists.txt  batch_normalization.h  conv.h  cuda_ops.cu  cuda_ops.h  input.h  linear.h  op.h  padding.h  permute.h  rammer_ops.cu  rammer_ops.h  relu.h
lstm/: CMakeLists.txt  base.cu  lstm.cu
nasnet/: CMakeLists.txt  nasnet.cpp
nasnet/base_kernels/: CMakeLists.txt  kernel_func_def_0.cu  kernel_func_def_1.cu  kernel_func_def_10.cu  kernel_func_def_11.cu  kernel_func_def_12.cu  kernel_func_def_13.cu  kernel_func_def_14.cu  kernel_func_def_15.cu  kernel_func_def_16.cu  kernel_func_def_17.cu  kernel_func_def_18.cu  kernel_func_def_19.cu  kernel_func_def_2.cu  kernel_func_def_20.cu  kernel_func_def_21.cu  kernel_func_def_22.cu  kernel_func_def_23.cu  kernel_func_def_24.cu  kernel_func_def_25.cu  kernel_func_def_26.cu  kernel_func_def_27.cu  kernel_func_def_29.cu  kernel_func_def_3.cu  kernel_func_def_30.cu  kernel_func_def_31.cu  kernel_func_def_32.cu  kernel_func_def_33.cu  kernel_func_def_34.cu  kernel_func_def_35.cu  kernel_func_def_36.cu  kernel_func_def_37.cu  kernel_func_def_38.cu  kernel_func_def_39.cu  kernel_func_def_4.cu  kernel_func_def_40.cu  kernel_func_def_41.cu  kernel_func_def_42.cu  kernel_func_def_43.cu  kernel_func_def_44.cu  (+23 more)
nasnet/kernels/: CMakeLists.txt  kernel_func_def_0.cu  kernel_func_def_1.cu  kernel_func_def_10.cu  kernel_func_def_11.cu  kernel_func_def_12.cu  kernel_func_def_13.cu  kernel_func_def_14.cu  kernel_func_def_15.cu  kernel_func_def_16.cu  kernel_func_def_17.cu  kernel_func_def_18.cu  kernel_func_def_19.cu  kernel_func_def_2.cu  kernel_func_def_20.cu  kernel_func_def_21.cu  kernel_func_def_22.cu  kernel_func_def_23.cu  kernel_func_def_24.cu  kernel_func_def_25.cu  kernel_func_def_26.cu  kernel_func_def_27.cu  kernel_func_def_28.cu  kernel_func_def_29.cu  kernel_func_def_3.cu  kernel_func_def_30.cu  kernel_func_def_31.cu  kernel_func_def_32.cu  kernel_func_def_33.cu  kernel_func_def_34.cu  kernel_func_def_35.cu  kernel_func_def_36.cu  kernel_func_def_37.cu  kernel_func_def_38.cu  kernel_func_def_39.cu  kernel_func_def_4.cu  kernel_func_def_40.cu  kernel_func_def_41.cu  kernel_func_def_42.cu  kernel_func_def_43.cu  (+22 more)
nasnet/rammer_kernels/: CMakeLists.txt  kernel_func_def_0.cu  kernel_func_def_1.cu  kernel_func_def_10.cu  kernel_func_def_11.cu  kernel_func_def_12.cu  kernel_func_def_13.cu  kernel_func_def_14.cu  kernel_func_def_15.cu  kernel_func_def_16.cu  kernel_func_def_17.cu  kernel_func_def_18.cu  kernel_func_def_19.cu  kernel_func_def_2.cu  kernel_func_def_20.cu  kernel_func_def_21.cu  kernel_func_def_22.cu  kernel_func_def_23.cu  kernel_func_def_24.cu  kernel_func_def_25.cu  kernel_func_def_26.cu  kernel_func_def_27.cu  kernel_func_def_28.cu  kernel_func_def_29.cu  kernel_func_def_3.cu  kernel_func_def_30.cu  kernel_func_def_31.cu  kernel_func_def_32.cu  kernel_func_def_33.cu  kernel_func_def_34.cu  kernel_func_def_35.cu  kernel_func_def_36.cu  kernel_func_def_37.cu  kernel_func_def_38.cu  kernel_func_def_39.cu  kernel_func_def_4.cu  kernel_func_def_40.cu  kernel_func_def_41.cu  kernel_func_def_42.cu  kernel_func_def_43.cu  (+22 more)
resnext/: CMakeLists.txt  base.cu  base.h  resnext.cu  resnext.h
resnext/op/: CMakeLists.txt  avg_pool.h  bottleneck_add.h  conv.h  conv_base.h  cuda_ops.cu  cuda_ops.h  flatten.h  linear.h  max_pool.h  op.h  op_helper.h  utils.h
seq2seq/: CMakeLists.txt  base.cu  seq2seq.cu
